# microscopemetrics-django-dash-omero

./: README.me  pyproject.toml
omero-dash/: README.md  setup.py
omero-dash/omero_dash/: plotly_apps.py  urls.py  views.py
omero-dash/omero_dash.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
omero-dash/omero_dash/templates/omero_dash/: base.html  demo_one.html  demo_six.html  index.html
