[tool.poetry]
name = "microscopemetrics-django-dash-omero"
version = "0.1.0"
description = ""
authors = ["wapaa <oumou.elmouminine.dhmine@insa.ueuromed.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.10 <=3.11"
cookiecutter = "^2.5.0"
django-plotly-dash = "^2.3.0"
zeroc-ice = "^3.6"
omero-py = "^5"
omero-web = "^5"
microscopemetrics-omero  = {git = "https://github.com/juliomateoslangerak/microscopemetrics-omero.git", branch='dev'}
dash-mantine-components = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


