[tool.poetry]
name = "microscopemetrics-django-dash-omero"
version = "0.1.0"
description = ""
authors = ["Oumou <oumoudhmine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.10 <=3.11"
cookiecutter = "^2.5.0"
django-plotly-dash = "^2.3.0"
zeroc-ice = "^3.6"
omero-py = "^5"
omero-web = "^5"
dash-mantine-components = "^0.12.1"
bootstrap4 = "0.1.0"
dpd-static-support = "0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


